--- a/src/Fractalizer.Core/Controls/SettingsPanel.resx
+++ b/src/Fractalizer.Core/Controls/SettingsPanel.resx
@@ -214,4 +214,7 @@
         gMFwU/a/gO6a9rsq0sUAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="iterationsToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>136, 14</value>
+  </metadata>
 </root>
